# llm_utils

./: .bumpversion.cfg  .gitignore  README.md  build.sh  build.sh.bak  build_package.sh  pyproject.toml  report.md  setup.py  test.py
.github/workflows/: deploy.yml  python-package.yml
legacy/meta_prompt/: __init__.py  _generate_prompt.py  fewshort_prompt_msg.py
llm_api_memoize/: __init__.py
llm_classifier/: __init__.py  base.py
llm_data_utils/: __init__.py  chat_format.py  load_chat_dataset.py
llm_utils/: __init__.py  chat_format.py  client_loadbalancer.py  conversations.py  gemini.py  group_messages.py  lm.py  lm_classification.py  lm_classifier.py  lm_pydantic.py  load_chat_dataset.py  meta_prompt.py  openai_wraper.py  rm .sh  test.ipynb  text_utils.py  tokenizers.py  vllm_load_balancer.py  vllm_loadbalancer.py  vllm_offline.py  vllm_serve.py
llm_utils/dspy_utils/: __init__.py  inspect_program.py
llm_utils/meta_prompt/: __init__.py  _generate_programe_json.py  _generate_prompt.py  examples_program.txt  fewshort_prompt_msg.py
llm_utils/meta_prompt/prompts/: __init__.py  example_python_prgrams.txt
llm_utils/scripts/: vllm_serve.py
nbs/: test_lm.ipynb  test_prompts.ipynb
tests/: lm.ipynb  test_imp.py
