[build-system]
requires = ["setuptools >= 64"]
build-backend = "setuptools.build_meta"

[project]
name = "llm_utils"
version = "0.1.0"
authors = [
    {name = "Anh Vo"}
]
description = "Utility functions for LLM applications"
requires-python = ">=3.9,<4.0"
dependencies = [
    "numpy",
    "pandas",
    "google-generativeai (>=0.8.4,<0.9.0)",
    "transformers (>=4.49.0,<5.0.0)",
    "dspy",
    "langchain (>=0.3.20,<0.4.0)",
    "langchain-core (>=0.3.41,<0.4.0)",
    "langchain-openai (>=0.3.7,<0.4.0)",
    "json-repair (>=0.40.0,<0.41.0)",
]

[project.scripts]
svllm = "llm_utils.vllm_serve:main"
svllm-lb = "llm_utils.vllm_load_balancer:run_load_balancer"
svllm-offline = "llm_utils.vllm_offline:main"
