
[tool.poetry]
name = "speedy_llm_utils" # This is package name
version = "1.1.8"
description = "Utility functions for LLM applications"
authors = ["Anh Vo"]
readme = "README.md"
homepage = "https://github.com/anhvth/llm_utils"
packages = [
    {include = "llm_utils"}
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
numpy = "*"
pandas = "*"
google-generativeai = ">=0.8.4,<0.9.0"
transformers = ">=4.49.0,<5.0.0"
dspy = "*"
langchain = ">=0.3.20,<0.4.0"
langchain-core = ">=0.3.41,<0.4.0"
langchain-openai = ">=0.3.7,<0.4.0"
json-repair = ">=0.40.0,<0.41.0"

[tool.poetry.scripts]
svllm = "llm_utils.scripts.vllm_serve:main"
svllm-lb = "llm_utils.scripts.vllm_load_balancer:run_load_balancer"